# security-mcp-review

./: .env  README.md  pyproject.toml  setup.py
src/: github_mcp_client.py  hack_mcp_server.py  minimal_github.py  test_github_mcp.py
src/mcp-servers/: fast-mcp-test.py  github_security_mcp_server.py  hack_mcp_server.py
src/tmp/: agents.db
src/tools/: github_extra_tools.py
